# Simple-Notes-Full-Stack-Application

./: Dockerfile.dev  compose.yaml  pyproject.toml
todo/: .env  database.py  main.py  models.py  notes.py  schemas.py  streamlit_client.py
