[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Aqsa Qadir <aqsa.qadir@bnr360.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
fastapi-utils = "^0.6.0"
streamlit = "^1.34.0"
fastapi-restful = {extras = ["all"], version = "^0.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
